[tool.poetry]
name = "LithicRivers"
version = "0.1.0"
description = "Flowing stone!"
authors = ["Henry Post <HenryFBP@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
asciimatics = "^1.15.0"
numpy = "^1.26.4"

[tool.poetry.dev-dependencies]
pyinstaller = "*"
macholib = { version = "*", markers = "sys_platform == 'darwin'" } # osx packaging tool for pyinstaller
coverage = "*"
lcov = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
